// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form/field should when not label 1`] = `
<form
  class="form"
>
  <div
    class="field__field  "
  >
    <div>
      test
    </div>
  </div>
</form>
`;

exports[`form/field should with label 1`] = `
<form
  class="form"
>
  <div
    class="field__field  "
  >
    <label
      class="field__label"
    >
      label test
    </label>
    <div>
      test
    </div>
  </div>
</form>
`;
